@@ -31,8 +31,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = i686-apple-darwin11.0.0
+host_triplet = i686-apple-darwin11.0.0
 subdir = testfiles
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -47,40 +47,40 @@ CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/simsong/md5deep/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/simsong/md5deep/missing --run tar
-AUTOCONF = ${SHELL} /home/simsong/md5deep/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/simsong/md5deep/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/simsong/md5deep/missing --run automake-1.11
-AWK = gawk
+ACLOCAL = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run aclocal-1.11
+AMTAR = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run tar
+AUTOCONF = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run automake-1.11
+AWK = awk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -I/usr/local/include  -D_FORTIFY_SOURCE=2 -Wall -g -pthread
+CFLAGS = -I/opt/local/include  -D_FORTIFY_SOURCE=2 -Wall -g -D_THREAD_SAFE -pthread
 CPP = gcc -E
-CPPFLAGS = -I/usr/local/include  -pthread
+CPPFLAGS = -I/opt/local/include  -D_THREAD_SAFE -pthread
 CXX = g++
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS =  -D_FORTIFY_SOURCE=2 -Wall -g
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-ECHO_C = 
-ECHO_N = -n
+ECHO_C = \c
+ECHO_N = 
 ECHO_T = 
-EGREP = /bin/grep -E
+EGREP = /usr/bin/grep -E
 EXEEXT = 
-GREP = /bin/grep
-INSTALL = /usr/bin/install -c
+GREP = /usr/bin/grep
+INSTALL = /opt/local/bin/ginstall -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LDFLAGS = -L/usr/local/lib 
-LIBOBJS = 
+LDFLAGS = -L/opt/local/lib 
+LIBOBJS =  ${LIBOBJDIR}lstat$U.o
 LIBS = -pthread 
-LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/simsong/md5deep/missing --run makeinfo
-MKDIR_P = /bin/mkdir -p
+LTLIBOBJS =  ${LIBOBJDIR}lstat$U.lo
+MAKEINFO = ${SHELL} /Users/simsong/md5deep/branches/version4/missing --run makeinfo
+MKDIR_P = /opt/local/bin/gmkdir -p
 OBJEXT = o
 PACKAGE = md5deep
 PACKAGE_BUGREPORT = research@jessekornblum.com
@@ -91,16 +91,16 @@ PACKAGE_URL =
 PACKAGE_VERSION = 4.0.0_alpha_005
 PATH_SEPARATOR = :
 PTHREAD_CC = gcc
-PTHREAD_CFLAGS = -pthread
+PTHREAD_CFLAGS = -D_THREAD_SAFE -pthread
 PTHREAD_LIBS = -pthread
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = 
 VERSION = 4.0.0_alpha_005
-abs_builddir = /home/simsong/md5deep/testfiles
-abs_srcdir = /home/simsong/md5deep/testfiles
-abs_top_builddir = /home/simsong/md5deep
-abs_top_srcdir = /home/simsong/md5deep
+abs_builddir = /Users/simsong/md5deep/branches/version4/testfiles
+abs_srcdir = /Users/simsong/md5deep/branches/version4/testfiles
+abs_top_builddir = /Users/simsong/md5deep/branches/version4
+abs_top_srcdir = /Users/simsong/md5deep/branches/version4
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -110,32 +110,32 @@ am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 ax_pthread_config = 
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = i686-apple-darwin11.0.0
 build_alias = 
-build_cpu = x86_64
-build_os = linux-gnu
-build_vendor = unknown
+build_cpu = i686
+build_os = darwin11.0.0
+build_vendor = apple
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-unknown-linux-gnu
+host = i686-apple-darwin11.0.0
 host_alias = 
-host_cpu = x86_64
-host_os = linux-gnu
-host_vendor = unknown
+host_cpu = i686
+host_os = darwin11.0.0
+host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/simsong/md5deep/install-sh
+install_sh = ${SHELL} /Users/simsong/md5deep/branches/version4/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = /bin/mkdir -p
+mkdir_p = /opt/local/bin/gmkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
 prefix = /usr/local
